--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.7",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
